--- a/.github/workflows/packing.yml
+++ b/.github/workflows/packing.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Set up Python 3.11
+      - name: 初始化Python 3.11
         uses: actions/setup-python@v4
         with :
           python-version: "3.11"
       
-      - name: Install requirements
+      - name: 依据requirements下载库
         run: |
           pip install -r requirements.txt
           
