--- a/.github/workflows/packing.yml
+++ b/.github/workflows/packing.yml
@@ -24,3 +24,6 @@ jobs:
           TOKEN: ${{ secrets.TOKEN }}
         run: |
           python3 main.py
+      - name: 打包地图
+        run: |
+          zip -r release.zip ./save
