--- a/.github/workflows/packing.yml
+++ b/.github/workflows/packing.yml
@@ -28,3 +28,16 @@ jobs:
       - name: 打包地图
         run: |
           zip -r release.zip ./saves
+
+      - name: Create Release and Upload Release Asset
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          tag_name: v1.0
+          name: 演示用
+          body: TODO New Release.
+          draft: false
+          prerelease: false
+          files: |
+            release.zip
+            LICENSE 
